# boilerplate-core

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
users/: models.py
users/migrations/: 0001_initial.py
