[project]
name = "boilerplate-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.7",
    "djangorestframework>=3.15.2",
    "pre-commit>=4.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.10.0",
]
